1.0-ALPHA3

  - Register for https://getamen.com/users and /topics urls. Let Amenoid handle those urls found in EMails oder elsewhere